# HERMES-WIN

./: .env  .eslintrc.js  .gitignore  AUTHENTICATION.md  CLIENT_QUICKSTART.md  CONSENT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  JWT_IMPLEMENTATION_SUMMARY.md  README.md  SECURE_AUTH_README.md  SECURITY.md  SERVICE_INSTALLATION.md  build-and-install.bat  config.example.toml  config.toml  electron-builder.json  install-service.bat  install-service.ps1  package-lock.json  package.json  query  tsconfig.json  tsconfig.renderer.json  uninstall-service.bat
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
agent-core/: Cargo.toml
agent-core/agent-core/: config.toml
agent-core/examples/: auth_demo.rs  auth_status.rs  credential_setup.rs  test_lock_screen.rs  test_sleep_command.rs  test_volume_commands.rs
agent-core/src/: agent.rs  auth.rs  commands.rs  config.rs  credentials.rs  lib.rs  media.rs  system.rs  websocket.rs
agent-service/: Cargo.toml
agent-service/src/: main.rs
agent-tray/: Cargo.toml
agent-tray/src/: main.rs
docs/: CLIENT_QUICKSTART.md  CONSENT.md  NATIVE_AUDIO.md  SECURITY.md
examples/: auth_demo.rs
extensions/hermes-media-bridge/: README.md  background.js  content-script.js  manifest.json  options.html  options.js
hermes-electron-app/: LICENSE  README.md  electron-builder.json  package.json  tsconfig.json
hermes-electron-app/native/win_volume/src/: lib.rs
hermes-electron-app/src/main/: main.ts
hermes-electron-app/src/preload/: preload.ts
hermes-electron-app/src/renderer/: index.tsx
hermes-electron-app/src/renderer/components/: App.tsx
hermes-electron-app/src/service/: agent.js  auth.js  commandExecutor.js  credentials.js  serviceWindows.js  test_server.js  win_volume.js  wsClient.js
issues/: implementacion_bloqueo_bluetooth.md
scripts/: build-assets.js  build-client-bundle.js  build-client-bundle.ps1  build-native-win-volume.ps1  build-native.js  build-renderer-esbuild.js  build-service-esbuild.js  prepare-electron-app.js  remove_rust.ps1  run-electron.js  service-command.js
src/main/: main.ts  mediaExtensionInstaller.ts  runtimePaths.ts
src/native/: README.md  binding.gyp
src/native/src/: addon.cc
src/native/win_volume/: Cargo.toml
src/native/win_volume/src/: lib.rs
src/preload/: preload.ts
src/renderer/: index.html  index.tsx
src/renderer/components/: App.tsx  BrandMark.tsx  Login.tsx  LogsPanel.tsx  authUtil.ts  styles.css
src/renderer/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx
src/renderer/styles/: index.css
src/service/: agent.js  agentManager.js  agentRuntime.js  audioControl.js  auth.js  commandExecutor.js  credentials.js  logger.js  manualAgent.js  mediaBridgeManager.js  runtimeState.js  serverUrl.js  serviceManager.js  serviceWindows.js  statusPayload.js  systemSnapshot.js  test_server.js  win_volume.js  wsClient.js
src/service/__tests__/: mediaBridgeManager.test.js  runtimeState.test.js  selectors.test.js  serviceChannel.test.js  statusPayload.test.js
src/service/daemon/: hermesnodeagent.xml
src/service/platform/: audioDarwin.js  audioLinux.js  audioWindows.js  commandUtils.js  errors.js  paths.js  platformInfo.js  serviceLinux.js  serviceManual.js  systemCommands.js  systemCommandsDarwin.js  systemCommandsLinux.js  systemCommandsWindows.js  systemSnapshotDarwin.js  systemSnapshotLinux.js  systemSnapshotShared.js  systemSnapshotWindows.js
src/service/platform/__tests__/: audioLinux.test.js  pathsChannel.test.js  systemSnapshotLinux.test.js
src/shared/: types.ts
