[workspace]
members = [
    "agent-core",
    "agent-service",
    "agent-tray"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rust_socketio = { version = "0.6", features = ["async"] }
url = "2.5"
windows = { version = "0.58", features = [
    "Foundation",
    "Media",
    "Media_Control",
    "Storage_Streams",
    "UI_ApplicationSettings",
    "System",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"