[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for HERMES Windows remote agent"
license = "GPL-2.0-or-later"

[dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rustls = { workspace = true }
rust_socketio = { workspace = true }
url = { workspace = true }
