[package]
name = "agent-service"
version = "0.1.0"
edition = "2021"
description = "Windows service wrapper for HERMES remote agent"
license = "GPL-2.0-or-later"

[dependencies]
agent-core = { path = "../agent-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
