[package]
name = "agent-tray"
version = "0.1.0"
edition = "2021"
description = "System tray application for HERMES remote agent"
license = "GPL-2.0-or-later"

[dependencies]
agent-core = { path = "../agent-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ctrlc = "3.4"

# TODO: Add proper system tray support
# [target.'cfg(windows)'.dependencies]
# tray-icon = "0.18"
# winit = "0.30"
