[package]
name = "win_volume"
version = "0.1.0"
edition = "2021"

[lib]
name = "win_volume"
crate-type = ["cdylib"]

[dependencies]
# napi-rs
napi = { version = "2", features = ["napi1"] }
napi-derive = "2"
windows = { version = "0.48", features = ["Win32_UI_Input_KeyboardAndMouse","Win32_Media_Audio","Win32_System_Com","Win32_Foundation"] }
